--- a/baham/templates/contact.html
+++ b/baham/templates/contact.html
@@ -1,6 +1,6 @@
 {% include 'header.html' %}
 {% include 'navbar.html' %}
 <main class="container">
-    <h1  class="my-4">Home</h1>
+    <h1 class="my-4">Contact</h1>
 </main>
 {% include 'footer.html' %}
